website/versioned_docs/version-1.15.0/tasks.md
---
id: version-1.15.0-tasks
title: Cumulus Tasks
hide_title: true
original_id: tasks
---

# Cumulus Tasks

A list of reusable Cumulus tasks. [Add your own.](adding-a-task.md)

## Tasks

### [@cumulus/discover-granules](https://github.com/nasa/cumulus/tree/master/tasks/discover-granules)
Discover Granules in FTP/HTTP/HTTPS/SFTP/S3 endpoints

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/discover-granules/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/discover-granules) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/discover-granules)

---

### [@cumulus/discover-pdrs](https://github.com/nasa/cumulus/tree/master/tasks/discover-pdrs)
Discover PDRs in FTP and HTTP endpoints

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/discover-pdrs/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/discover-pdrs) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/discover-pdrs)

---

### [@cumulus/files-to-granules](https://github.com/nasa/cumulus/tree/master/tasks/files-to-granules)
Converts array-of-files input into a granules object by extracting granuleId from filename

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/files-to-granules/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/files-to-granules) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/files-to-granules)

---

### [@cumulus/hello-world](https://github.com/nasa/cumulus/tree/master/tasks/hello-world)
Example task

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/hello-world/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/hello-world) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/hello-world)

---

### [@cumulus/move-granules](https://github.com/nasa/cumulus/tree/master/tasks/move-granules)
Move granule files from staging to final location

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/move-granules/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/move-granules) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/move-granules)

---

### [@cumulus/parse-pdr](https://github.com/nasa/cumulus/tree/master/tasks/parse-pdr)
Download and Parse a given PDR

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/parse-pdr/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/parse-pdr) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/parse-pdr)

---

### [@cumulus/pdr-status-check](https://github.com/nasa/cumulus/tree/master/tasks/pdr-status-check)
Checks execution status of granules in a PDR

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/pdr-status-check/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/pdr-status-check) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/pdr-status-check)

---

### [@cumulus/post-to-cmr](https://github.com/nasa/cumulus/tree/master/tasks/post-to-cmr)
Post a given granule to CMR

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/post-to-cmr/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/post-to-cmr) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/post-to-cmr)

---

### [@cumulus/queue-granules](https://github.com/nasa/cumulus/tree/master/tasks/queue-granules)
Add discovered granules to the queue

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/queue-granules/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/queue-granules) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/queue-granules)

---

### [@cumulus/queue-pdrs](https://github.com/nasa/cumulus/tree/master/tasks/queue-pdrs)
Add discovered PDRs to a queue

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/queue-pdrs/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/queue-pdrs) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/queue-pdrs)

---

### [@cumulus/sf-sns-report](https://github.com/nasa/cumulus/tree/master/tasks/sf-sns-report)
Publish ingest notifications to SNS

- Resources: [npm](https://npmjs.com/package/@cumulus/sf-sns-report) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/sf-sns-report)

---

### [@cumulus/sync-granule](https://github.com/nasa/cumulus/tree/master/tasks/sync-granule)
Download a given granule

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/sync-granule/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/sync-granule) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/sync-granule)

---

### [@cumulus/test-processing](https://github.com/nasa/cumulus/tree/master/tasks/test-processing)
Fake processing task used for integration tests

- Schemas: See this module's [schema definitions](https://github.com/nasa/cumulus/tree/master/tasks/test-processing/schemas).
- Resources: [npm](https://npmjs.com/package/@cumulus/test-processing) | [source](https://github.com/nasa/cumulus) | [web](https://github.com/nasa/cumulus/tree/master/tasks/test-processing)
